--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
-    "build:server": "esbuild server/index.ts server/routes.ts server/storage.ts server/types.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/server --splitting",
-    "start": "NODE_ENV=production node dist/index.js",
+    "build:server": "esbuild server/index.ts server/routes.ts server/storage.ts server/supabase-routes.ts server/supabase-storage.ts server/types.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/server --splitting",
+    "start": "NODE_ENV=production node azure-server.js",
+    "azure:build": "npm run build && echo 'Build completed for Azure deployment'",
+    "azure:start": "NODE_ENV=production PORT=8080 node azure-server.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "vercel-build": "npm run build"
@@ -44,6 +46,7 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.60.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
